# rx

./: .gitignore  .pxrc  .travis.yml  .vxrc  CHANGELOG  CONTRIBUTING  Cargo.toml  LICENSE  README  RELEASE  db32.palette  rx.desktop  settings.json
.github/workflows/: actions.yml
.vim/: coc-settings.json
app/: Cargo.toml
app/assets/: brush.rgba  bucket.rgba  cross.rgba  crosshair.rgba  cursors.rgba  eraser.rgba  grab.rgba  hand.rgba  omni.rgba  pencil.rgba  picker.rgba  pointer.rgba
app/config/: init.rx
app/config/palettes/: sweetie16.palette
app/fonts/: chicago12.uf2  courier12.uf2  diamond12.uf2  geneva12.uf2  gohu14.uf2  helvetica12.uf2  losangeles12.uf2  monaco12.uf2  msx816.uf2  newyork12.uf2  palatino12.uf2  sans10-regular.uf2  sapphire14.uf2  terminal12.uf2  venice14.uf2
app/src/: autocomplete.rs  brush.rs  bucket.rs  command.rs  command_line.rs  data.rs  history.rs  keyboard.rs  lib.rs  palette.rs  png.rs  script.rs  session.rs  settings.rs  ui.rs  util.rs  view.rs
app/src/script/: parsers.rs  value.rs
app/src/ui/: theme.rs  widgets.rs
app/src/ui/widgets/: command_line.rs  palette.rs  root.rs  view.rs  viewport.rs
assets/: rx.rgba
config/: init.rx
config/palettes/: db16.palette  db32.palette  edg32.palette
docs/: Makefile  build.md  build.sh  guide.md  index.md  template.html
docs/html/: .gitignore  fonts.css  style.css
docs/html/videos/: demo.webm
docs/videos/: manipulating.webm  painting.webm
examples/: Cargo.toml
framework/: Cargo.toml
framework/src/: application.rs  gfx.rs  lib.rs  logger.rs  platform.rs  renderer.rs  timer.rs  ui.rs
framework/src/gfx/: color.rs  cursor2d.rs  math.rs  pixels.rs  shape2d.rs  sprite2d.rs
framework/src/gfx/math/: algebra.rs  float.rs  rect.rs  size.rs  traits.rs  transform.rs
framework/src/platform/: dummy.rs  glfw.rs
framework/src/renderer/: backends.rs
framework/src/renderer/backends/: gl.rs
framework/src/renderer/backends/gl/data/: cursor.frag  cursor.vert  screen.frag  sprite.vert
framework/src/ui/: canvas.rs  constraints.rs  context.rs  cursor.rs  env.rs  event.rs  tests.rs  text.rs  widgets.rs
framework/src/ui/text/: fonts.rs
framework/src/ui/widgets/: align.rs  button.rs  click.rs  controller.rs  hover.rs  hstack.rs  image.rs  painter.rs  pod.rs  sized_box.rs  widget.rs  zstack.rs
palettes/: db16.palette  db32.palette  edg32.palette  sweetie16.palette
scripts/: create-appimage  create-tarball
src/: alloc.rs  autocomplete.rs  brush.rs  cmd.rs  color.rs  cursor2d.rs  data.rs  draw.rs  event.rs  execution.rs  flood.rs  font.rs  framebuffer2d.rs  gfx.rs  gl.rs  gpu.rs  history.rs  image.rs  io.rs  lib.rs  logger.rs  main.rs  palette.rs  parser.rs  pixels.rs  renderer.rs  resources.rs  screen2d.rs  session.rs  shape.rs  sprite.rs  timer.rs  util.rs  view.rs  wgpu.rs
src/data/: cursor.frag  cursor.frag.spv  cursor.vert  cursor.vert.spv  screen.frag
src/gfx/: color.rs  math.rs  rect.rs  shape2d.rs  sprite2d.rs  transform.rs
src/gfx/math/: algebra.rs
src/gl/: mod.rs
src/gl/data/: cursor.frag  cursor.vert  lookuptex.frag  screen.frag  screen.vert  shape.frag  shape.vert  sprite.frag  sprite.vert
src/platform/: dummy.rs  glfw.rs  mod.rs  winit.rs
src/view/: layer.rs  path.rs  pixels.rs  resource.rs
src/wgpu/: cursor2d.rs  mod.rs
src/wgpu/data/: cursor.frag.spv  cursor.vert  cursor.vert.spv  framebuffer.frag  framebuffer.frag.spv  framebuffer.vert  framebuffer.vert.spv  screen.frag.spv  screen.vert  screen.vert.spv
tests/: main.rs
tests/archive/: archive.digest  archive.events  archive.rxa  archive.rxz
tests/basic-drawing/: basic-drawing.digest  basic-drawing.events  basic-drawing.toml
tests/brush-advanced/: brush-advanced.digest  brush-advanced.events  brush-advanced.rx
tests/brush-basic/: brush-basic.digest  brush-basic.events  brush-basic.rx
tests/frames/: frames.digest  frames.events  frames.rx
tests/grid/: grid.digest  grid.events  grid.rx
tests/layers/: layers.digest  layers.events
tests/layers-snapshots/: layers-snapshots.digest  layers-snapshots.events
tests/mouse/: mouse.digest  mouse.events  mouse.rx
tests/organize-views/: organize-views.digest  organize-views.events  organize-views.rx
tests/palette/: .rxrc  palette.digest  palette.events  palette.rx  palette.toml
tests/resize/: resize.digest  resize.events
tests/saving/: saving.digest  saving.events  saving.rx  saving.toml
tests/simple/: simple.digest  simple.events  simple.rx
tests/snapshots/: snapshots.digest  snapshots.events  snapshots.rx
tests/source/: source.digest  source.events  source.rx
tests/ui/: ui.digest  ui.events  ui.rx
tests/views/: views.digest  views.events  views.rx
tests/visual/: visual.digest  visual.events  visual.rx
tests/visual-mode/: .rxrc  visual-mode.digest  visual-mode.events  visual-mode.toml
tests/visual-mouse/: visual-mouse.digest  visual-mouse.events  visual-mouse.rx  visual-mouse.toml
tests/yank-paste/: yank-paste.digest  yank-paste.events  yank-paste.rx
utils/: Cargo.toml
utils/src/: main.rs
