[package]
name = "rx-editor"
version = "0.3.0"
description = "a modern, extensible pixel editor"
license = "GPL-3.0-only"
repository = "https://github.com/cloudhead/rx"
homepage = "https://rx.cloudhead.io"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"

[features]
default = ["glfw"]
compatibility = ["luminance", "luminance-derive", "gl"]

[dependencies]
pico-args = "0.3.0"
env_logger = { version = "0.6.2", default-features = false, features = ["termcolor"] }
png = { version = "0.15.0" }
gif = "0.10.3"
glfw = { version = "0.34.0", optional = true }
winit = { version = "0.20.0-alpha4", optional = true }
snap = "0.2.5"
log = "0.4.6"
directories = "2.0.2"
meowhash = "0.1.2"
digest = "0.8.1"
nonempty = "0.1.4"

# Dependencies for "compatibility" feature.
luminance = { version = "0.38.0", optional = true }
luminance-derive = { version = "0.5.0", optional = true }
gl = { version = "0.14", optional = true }

[dependencies.rgx]
version = "0.6.0"

[dev-dependencies]
lazy_static = "1.3"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"

[lib]
name = "rx"

[[bin]]
name = "rx"
path = "src/main.rs"
