[package]
name = "rx"
version = "0.4.0"
description = "a modern, extensible pixel editor"
license = "GPL-3.0-only"
repository = "https://github.com/cloudhead/rx"
homepage = "https://rx.cloudhead.io"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"

[features]
default = ["glfw", "luminance", "luminance-derive", "gl"]
wgpu = ["glfw", "rgx/renderer"]

[dependencies]
pico-args = "0.3.0"
simple_logger = { version = "1.4.0", default-features = false }
png = { version = "0.15.0" }
gif = "0.10.3"
glfw = { version = "0.36.0", optional = true }
raw-window-handle = { version = "0.3.3", optional = true }
zip = { version = "0.5.5", default-features = false, features = ["deflate", "flate2"] }
snap = "0.2.5"
log = "0.4.6"
directories = "2.0.2"
seahash = "4.0.0"
digest = "0.8.1"
nonempty = "0.1.4"
memoir = "0.2.1"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"

# Default features.
luminance = { version = "0.38.0", optional = true }
luminance-derive = { version = "0.5.0", optional = true }
gl = { version = "0.14", optional = true }

[dependencies.rgx]
version = "0.8.1"

[dev-dependencies]
lazy_static = "1.3"
tempfile = "3"
