[package]
name = "rx"
version = "1.0.0"
license = "GPL-3.0-only"
authors = ["Alexis Sellier <hi@cloudhead.io>"]
homepage = "https://rx.cloudhead.io"
edition = "2021"
default-run = "rx"

[features]
default = []

[dependencies]
anyhow = { version = "1" }
directories = { version = "4.0.1" }
lexopt = { version = "0.2.0" }
log = { version = "0.4.17", features = ["std"] }
lz4_flex = { version = "0.9.3", default-features = false, features = ["safe-encode", "safe-decode"] }
memoir = { version = "0.3.0" }
nonempty = { version = "0.7.0" }
png = { version = "0.17.5", default-features = false, optional = true }
thiserror = { version = "1.0.30" }

[dependencies.rx-framework]
version = "1.0.0"
path = "../framework"

[dev-dependencies]
tempfile = "3.3.0"

[[bin]]
name = "rx"
