[package]
name = "rx-examples"
version = "1.0.0"
license = "GPL-3.0-only"
authors = ["Alexis Sellier <hi@cloudhead.io>"]
homepage = "https://rx.cloudhead.io"
edition = "2021"

[features]
default = []

[dependencies]
anyhow = { version = "1" }
log = { version = "0.4.17", features = ["std"] }

[dependencies.rx]
version = "1.0.0"
path = "../app"

[[bin]]
name = "button"
path = "bin/button.rs"

[[bin]]
name = "cursors"
path = "bin/cursors.rs"

[[bin]]
name = "picker"
path = "bin/picker.rs"

[[bin]]
name = "hover"
path = "bin/hover.rs"
