[package]
name = "rx-framework"
version = "1.0.0"
license = "GPL-3.0-only"
authors = ["Alexis Sellier <hi@cloudhead.io>"]
homepage = "https://rx.cloudhead.io"
edition = "2021"

[features]
default = ["glfw"]
wayland = ["glfw", "glfw/wayland"]

[dependencies]
gl = "0.14"
glfw = { version = "0.45.0", optional = true }
log = { version = "0.4.17", features = ["std"] }
luminance = "0.47.0"
luminance-derive = "0.10.0"
luminance-gl = "0.19.1"
memoir = { version = "0.3.0" }
nonempty = "0.7.0"
raw-window-handle = "0.4.3"
termcolor = { version = "1.1.3" }
thiserror = "1.0.30"
